Shows or hides menus on projects according to menu settings.
* Requirements:

There is VOC to want to shows and hides menus on projects.

* Solutions:

When creating projects and change project settings, users can configure menu settings to show or hides.

Menus which can be configured are `Code`, `Issue`, `Pull Request`, `Review`, `Milestone` and `Board`.

After creating projects, only `Project Manager` can configure menu settings.

Private-issue: 601

--- a/app/views/board/list.scala.html
+++ b/app/views/board/list.scala.html
@@ -102,9 +102,11 @@
 			"nTotalPages" : @page.getTotalPageCount
 		});
 
-		yobi.ShortcutKey.setKeymapLink({
-		   "N": "@routes.BoardApp.newPostForm(project.owner, project.name)"
-		});
+        @if(project.menuSetting.board) {
+            yobi.ShortcutKey.setKeymapLink({
+                "N": "@routes.BoardApp.newPostForm(project.owner, project.name)"
+            });
+        }
 	});
 </script>
 }
