--- a/app/views/issue/my_partial_list.scala.html
+++ b/app/views/issue/my_partial_list.scala.html
@@ -18,7 +18,7 @@
 * See the License for the specific language governing permissions and
 * limitations under the License.
 **@
-@(issueList:Collection[Issue], searchCondition:models.support.SearchCondition, pageIndex:Int, totalPageCount:Int)
+@(issueList:Collection[Issue], searchCondition:models.support.SearchCondition, pageIndex:Int, totalPageCount:Int, project:Project)
 @import java.util
 @import utils.JodaDateUtil
 @import utils.TemplateHelper._
@@ -89,7 +89,7 @@
                 }
             </div>
             <div class="pull-right">
-                @if(issue.milestone != null) {
+                @if(project.menuSetting.milestone && issue.milestone != null) {
                     <div class="mileston-tag">
                         <a href="@routes.MilestoneApp.milestone(issue.project.owner, issue.project.name, issue.milestone.id)" data-toggle="tooltip" data-placement="top" title="@Messages("milestone")">
                         @issue.milestone.title
