--- a/app/views/issue/my_partial_search.scala.html
+++ b/app/views/issue/my_partial_search.scala.html
@@ -116,7 +116,7 @@
 			}
 		</div>
 
-            @my_partial_list(currentPage.getList, param, currentPage.getPageIndex, currentPage.getTotalPageCount)
+            @my_partial_list(currentPage.getList, param, currentPage.getPageIndex, currentPage.getTotalPageCount, project)
 
             <div class="pull-left" style="padding:10px;">
             </div>
