--- a/app/views/project/create.scala.html
+++ b/app/views/project/create.scala.html
@@ -163,6 +163,32 @@
               }
             </div>
           </div>
+          <hr>
+          <!-- Menu Setting -->
+          <div class="row-fluid">
+            <div class="span2 right-txt">
+              @Messages("project.menu.setting")
+            </div>
+            <div class="span10">
+                <input type="checkbox" class="radio-btn" id="menuSettingCode" name="code" value="true" checked="checked">
+                <label for="menuSettingCode" class="bg-radiobtn label-public">@Messages("menu.code")</label>
+                &nbsp;&nbsp;&nbsp;
+                <input type="checkbox" class="radio-btn" id="menuSettingIssue" name="issue" value="true" checked="checked">
+                <label for="menuSettingIssue" class="bg-radiobtn label-public">@Messages("menu.issue")</label>
+                &nbsp;&nbsp;&nbsp;
+                <input type="checkbox" class="radio-btn" id="menuSettingPullRequest" name="pullRequest" value="true" checked="checked">
+                <label for="menuSettingPullRequest" class="bg-radiobtn label-public">@Messages("menu.pullRequest")</label>
+                &nbsp;&nbsp;&nbsp;
+                <input type="checkbox" class="radio-btn" id="menuSettingReview" name="review" value="true" checked="checked">
+                <label for="menuSettingReview" class="bg-radiobtn label-public">@Messages("menu.review")</label>
+                &nbsp;&nbsp;&nbsp;
+                <input type="checkbox" class="radio-btn" id="menuSettingMilestone" name="milestone" value="true" checked="checked">
+                <label for="menuSettingMilestone" class="bg-radiobtn label-public">@Messages("milestone")</label>
+                &nbsp;&nbsp;&nbsp;
+                <input type="checkbox" class="radio-btn" id="menuSettingBoard" name="board" value="true" checked="checked">
+                <label for="menuSettingBoard" class="bg-radiobtn label-public">@Messages("menu.board")</label>
+            </div>
+          </div>
           <!-- // -->
         </div>
 
