--- a/app/views/issue/partial_list.scala.html
+++ b/app/views/issue/partial_list.scala.html
@@ -93,7 +93,7 @@
                 }
             </div>
             <div class="pull-right">
-                @if(issue.milestone != null) {
+                @if(project.menuSetting.milestone && issue.milestone != null) {
                     <div class="mileston-tag">
                         <a href="@routes.MilestoneApp.milestone(project.owner, project.name, issue.milestone.id)" data-toggle="tooltip" data-placement="top" title="@Messages("milestone")">
                         @issue.milestone.title
