--- a/app/views/projectMenu.scala.html
+++ b/app/views/projectMenu.scala.html
@@ -44,44 +44,56 @@
                     @Messages("title.projectHome")
                 </a>
             </li>
-            <li class="@isActiveMenu(MenuType.CODE)">
-                <a href="@routes.CodeApp.codeBrowser(project.owner, project.name)">
-                    @Messages("menu.code")
-                </a>
-            </li>
-            <li class="@isActiveMenu(MenuType.ISSUE)">
-                <a href="@routes.IssueApp.issues(project.owner, project.name, "open")">
-                    @Messages("menu.issue")
-                    @if(Issue.countIssues(project.id, State.OPEN) > 0){
-                    <span class="project-menu-count">@Issue.countIssues(project.id, State.OPEN)</span>
-                    }
-                </a>
-            </li>
-            @if(project.vcs.equals("GIT")){
-                <li class="@isActiveMenu(MenuType.PULL_REQUEST)">
-                <a href="@getPullRequestURL(project)">
-                    @Messages("menu.pullRequest")
-                    @if(PullRequest.countOpenedPullRequests(project) > 0){
-                    <span class="project-menu-count">@PullRequest.countOpenedPullRequests(project)</span>
-                    }
-                </a>
-            </li>
+            @if(project.menuSetting.code) {
+                <li class="@isActiveMenu(MenuType.CODE)">
+                    <a href="@routes.CodeApp.codeBrowser(project.owner, project.name)">
+                        @Messages("menu.code")
+                    </a>
+                </li>
             }
-            <li class="@isActiveMenu(MenuType.PROJECT_REVIEW)">
-                <a href="@routes.ReviewThreadApp.reviewThreads(project.owner, project.name)">
-                @Messages("menu.review")
-                </a>
-            </li>
-            <li class="@isActiveMenu(MenuType.MILESTONE)">
-                <a href="@routes.MilestoneApp.milestones(project.owner, project.name)">
-                    @Messages("milestone")
-                </a>
-            </li>
-            <li class="@isActiveMenu(MenuType.BOARD)">
-                <a href="@routes.BoardApp.posts(project.owner, project.name)">
-                    @Messages("menu.board")
-                </a>
-            </li>
+            @if(project.menuSetting.issue) {
+                <li class="@isActiveMenu(MenuType.ISSUE)">
+                    <a href="@routes.IssueApp.issues(project.owner, project.name, "open")">
+                        @Messages("menu.issue")
+                        @if(Issue.countIssues(project.id, State.OPEN) > 0){
+                        <span class="project-menu-count">@Issue.countIssues(project.id, State.OPEN)</span>
+                        }
+                    </a>
+                </li>
+            }
+            @if(project.menuSetting.pullRequest) {
+                @if(project.vcs.equals("GIT")){
+                    <li class="@isActiveMenu(MenuType.PULL_REQUEST)">
+                    <a href="@getPullRequestURL(project)">
+                        @Messages("menu.pullRequest")
+                        @if(PullRequest.countOpenedPullRequests(project) > 0){
+                        <span class="project-menu-count">@PullRequest.countOpenedPullRequests(project)</span>
+                        }
+                    </a>
+                </li>
+                }
+            }
+            @if(project.menuSetting.review) {
+                <li class="@isActiveMenu(MenuType.PROJECT_REVIEW)">
+                    <a href="@routes.ReviewThreadApp.reviewThreads(project.owner, project.name)">
+                    @Messages("menu.review")
+                    </a>
+                </li>
+            }
+            @if(project.menuSetting.milestone) {
+                <li class="@isActiveMenu(MenuType.MILESTONE)">
+                    <a href="@routes.MilestoneApp.milestones(project.owner, project.name)">
+                        @Messages("milestone")
+                    </a>
+                </li>
+            }
+            @if(project.menuSetting.board) {
+                <li class="@isActiveMenu(MenuType.BOARD)">
+                    <a href="@routes.BoardApp.posts(project.owner, project.name)">
+                        @Messages("menu.board")
+                    </a>
+                </li>
+            }
         </ul>
         @if(AccessControl.isAllowed(UserApp.currentUser(), project.asResource(), Operation.UPDATE)){
         <div class="project-setting">
@@ -103,12 +115,20 @@
 <script type="text/javascript">
 $(document).ready(function(){
     var htKeyMap = {
-        "H": "@routes.ProjectApp.project(project.owner, project.name)",
-        "B": "@routes.BoardApp.posts(project.owner, project.name)",
-        "C": "@routes.CodeApp.codeBrowser(project.owner, project.name)",
-        "I": "@routes.IssueApp.issues(project.owner, project.name,"open")",
-        "M": "@routes.MilestoneApp.milestones(project.owner, project.name)"
-        @if(project.vcs.equals("GIT")){
+        "H": "@routes.ProjectApp.project(project.owner, project.name)"
+        @if(project.menuSetting.board) {
+            ,"B": "@routes.BoardApp.posts(project.owner, project.name)"
+        }
+        @if(project.menuSetting.code) {
+            ,"C": "@routes.CodeApp.codeBrowser(project.owner, project.name)"
+        }
+        @if(project.menuSetting.issue) {
+            ,"I": "@routes.IssueApp.issues(project.owner, project.name,"open")"
+        }
+        @if(project.menuSetting.milestone) {
+            ,"M": "@routes.MilestoneApp.milestones(project.owner, project.name)"
+        }
+        @if(project.menuSetting.pullRequest && project.vcs.equals("GIT")){
            ,"F": "@getPullRequestURL(project)"
         }
         @if(ProjectUser.roleOf(session.get("loginId"), project).equals("manager")){
