ui.Select2: add 'branch' format and apply to code browser, history.

--- a/app/assets/stylesheets/less/_override.less
+++ b/app/assets/stylesheets/less/_override.less
@@ -287,3 +287,13 @@ li.select2-result-with-children:first-of-type {
 .select2-without-searchbox .select2-search {
     display: none;
 }
+.select2-drop.branches {
+    width:auto !important;
+    border-top:1px solid rgba(0,0,0,0.15);
+    .box-shadow(2px 2px 0 rgba(0,0,0,0.05));
+    .border-radius(3px);
+
+    .select2-results {
+        width: auto;
+    }
+}
