--- a/app/views/code/history.scala.html
+++ b/app/views/code/history.scala.html
@@ -94,20 +94,16 @@
                 }
 
                 @if(path == null){
-                <div id="branches" class="btn-group branches pull-right" data-name="branch" data-activate="manual">
-                    <button class="btn dropdown-toggle large" data-toggle="dropdown">
-                        <span class="d-label">@if(selectedBranch){ @selectedBranch } else { HEAD }</span>
-                        <span class="d-caret"><span class="caret"></span></span>
-                    </button>
-                    <ul class="dropdown-menu">
-                        @defining(RepositoryService.getRepository(project).getBranches()) { branches =>
-                            @for(branch <- branches){
-                                @common.branchItem("history", project, branch, null,
-                                    utils.TemplateHelper.equals(branch, selectedBranch))
-                            }
+                <select id="branches" data-toggle="select2" data-format="branch" data-dropdown-css-class="branches" class="pull-right">
+                    @defining(RepositoryService.getRepository(project).getBranches()) { branches =>
+                        @for(branchName <- branches){
+                            <option value="@routes.CodeHistoryApp.history(project.owner, project.name, URLEncoder.encode(branchName, "UTF-8"), null)"
+                                    @if(selectedBranch){ @if(branchItemName(branchName) == branchItemName(selectedBranch)){ selected } }>
+                                    @branchName
+                            </option>
                         }
-                    </ul>
-                </div>
+                    }
+                </select>
 
                 <ul class="nav nav-tabs" style="margin-bottom:20px;">
                     <li>
@@ -222,10 +218,17 @@
         </div>
     </div>
 </div>
+
+@common.select2()
+
 <script type="text/javascript">
 $(document).ready(function(){
     $("button.moreBtn").on("click", function(){
         $(this).next("pre.commitMsg.desc").toggleClass("hidden");
+    });
+
+    $("#branches").on("change", function(evt){
+        location.href = evt.val;
     });
 
     // Copy CommitId
