--- a/app/views/project/setting.scala.html
+++ b/app/views/project/setting.scala.html
@@ -131,6 +131,9 @@
         </form>
     </div>
 </div>
+
+@common.select2()
+
 <script type="text/javascript">
     $(document).ready(function(){
         $yobi.loadModule("project.Setting");
