--- a/app/views/project/setting.scala.html
+++ b/app/views/project/setting.scala.html
@@ -109,18 +109,15 @@
                 <div class="box-wrap middle">
                     <div class="cu-label vmiddle">@Messages("code.branches.defaultBranch")</div>
                     <div class="cu-desc">
-                        <div class="btn-group branches" data-id="project-default-branch" data-name="defaultBranch">
-                            <button class="btn dropdown-toggle large" data-toggle="dropdown">
-                                <span class="d-label">@branchItemName(project.defaultBranch())</span>
-                                <span class="d-caret"><span class="caret"></span></span>
-                            </button>
-                            <ul class="dropdown-menu">
-                                @for(branch <- branches if Branches.itemType(branch).equals("branch")){
-                                    @common.branchItem("projectSetting", project, branch, null, false)
-                                }
-                            </ul>
-                        </div>
-                        <span class="note ml10">@Messages("project.defaultBranch.placeholder")</span>
+                        <select id="project-default-branch" name="defaultBranch"
+                                data-toggle="select2" data-format="branch" data-dropdown-css-class="branches">
+                            @for(branchName <- branches if Branches.itemType(branchName).equals("branch")){
+                                <option value="@branchName"
+                                        @if(branchItemName(branchName) == branchItemName(project.defaultBranch)){ selected }>
+                                        @branchName
+                                </option>
+                            }
+                        </select>
                     </div>
                 </div>
             </div>
