Introduce a WEB API for Issue Label Categories
Create a category

    POST /:user/:project/issue/label/categories

Get a cateogry

    GET /:user/:project/issue/label/category/:id

Update a category

    PUT /:user/:project/issue/label/category/:id

Delete a category

    DELETE /:user/:project/issue/label/category/:id

Get categories

    GET /:user/:project/issue/label/categories

Each category has id, name and isExclusive field. All APIs respond in
application/json and accept a request in any content type which can be
parsed by DynamicForm.bindFromRequest(), like multipart/form-data,
application/x-www-form-urlencoded and application/json.

--- a/app/views/issue/partial_list.scala.html
+++ b/app/views/issue/partial_list.scala.html
@@ -26,7 +26,7 @@
 
 @urlToList = {@routes.IssueApp.issues(project.owner, project.name, searchCondition.state, "html", pageIndex + 1)}
 
-@issueLabels(issue:Issue) = {@for(label <- issue.labels.toList.sortBy(r => (r.category, r.name))) {@label.category,@label.id,@label.name|}}
+@issueLabels(issue:Issue) = {@for(label <- issue.labels.toList.sortBy(r => (r.category.name, r.name))) {@label.category.name,@label.id,@label.name|}}
 
 <ul class="post-list-wrap row-fluid">
 @for(issue <- issueList){
@@ -84,7 +84,7 @@
                     </span>
                     }
 
-                    @for(label <- issue.labels.toList.sortBy(r => (r.category, r.name))) {
+                    @for(label <- issue.labels.toList.sortBy(r => (r.category.name, r.name))) {
                         <a href="#" class="label issue-label list-label" data-labelId="@label.id" data-color="@label.color" style="background:@label.color">@label.name</a>
                     }
                 </div>
