--- a/app/views/user/partial_issues.scala.html
+++ b/app/views/user/partial_issues.scala.html
@@ -75,7 +75,7 @@
             </span>
             }
             
-            @for(label <- issue.labels.toList.sortBy(r => (r.category, r.name))) {
+            @for(label <- issue.labels.toList.sortBy(r => (r.category.name, r.name))) {
                 @makeLabelLink(project, label)
             }
         </div>
